tests/tui/snapshots/tui_tests__tui__tmux_smoke__tmux_after_version_24x80.snap
---
source: tests/tui/tmux_smoke.rs
assertion_line: 109
expression: normalized
---
┌ Todo (0/0)───┐┌──────────────── h/l:panels j/k:panes ┐┌ Subagents (0/0)──────┐
│No items. Use ││┌Messages────────────────────────────┐││No subagents running  │
│/todo add     │││  clankers — MODEL —      │││                      │
│<text> or the │││keymap: helix — press i to start    │││                      │
│todo tool.    │││typing                              │││                      │
│              │││                                    │││                      │
│              │││  clankers 0.1.0                    │││                      │
│              │││                                    ││└──────────────────────┘
│              │││                                    ││┌ Peers (0/0)──────────┐
└──────────────┘││                                    │││No peers known. /peers│
┌ Files (0, 0 o┐││                                    │││add <id> <name>       │
│No files      │││                                    │││                      │
│touched yet.  │││                                    │││                      │
│              │││                                    ││└──────────────────────┘
│              │││                                    ││┌ Spawned/BG (0 active)┐
│              │││                                    │││No spawned/background │
│              │││                                    │││processes tracked.    │
│              │││                                    │││                      │
│              ││└────────────────────────────────────┘││                      │
└──────────────┘└──────────────────────────────────────┘└──────────────────────┘
┌Input─────────────────────────────────────────────────────────────────────────┐
│>                                                                             │
└──────────────────────────────────────────────────────────────────────────────┘
 INSERT  💭 max  👤 default  ░░░░░░░░N/N.Nk   main  idle | MODEL
