tests/tui/snapshots/tui_tests__tui__tmux_smoke__tmux_leader_menu_30x100.snap
---
source: tests/tui/tmux_smoke.rs
assertion_line: 122
expression: normalized
---
┌ Todo (0/0)───────┐┌────────────────────────── h/l:panels j/k:panes ┐┌ Subagents (0/0)────────────┐
│No items. Use     ││┌Messages──────────────────────────────────────┐││No subagents running        │
│/todo add <text>  │││  clankers — c┌ Space ──────────────────┐lix —│││                            │
│or the todo tool. │││press i to sta│  ?  help                │     │││                            │
│                  │││              │  A  auto-test           │     │││                            │
│                  │││              │  C  compact             │     │││                            │
│                  │││              │  E  experiments         │     │││                            │
│                  │││              │  G  GitHub              │     │││                            │
│                  │││              │  I  prompt improve      │     │││                            │
│                  │││              │  L  loop…               │     ││└────────────────────────────┘
│                  │││              │  M  model/thinking…     │     ││┌ Peers (0/0)────────────────┐
│                  │││              │  P  plan mode           │     │││No peers known. /peers add  │
└──────────────────┘││              │  R  code review         │     │││<id> <name>                 │
┌ Files (0, 0 ops)─┐││              │  S  system/memory…      │     │││                            │
│No files touched  │││              │  T  show/hide thinking  │     │││                            │
│yet.              │││              │  `  toggle panel        │     │││                            │
│                  │││              │  a  account             │     │││                            │
│                  │││              │  b  branch…             │     ││└────────────────────────────┘
│                  │││              │  c  cancel/abort        │     ││┌ Spawned/BG (0 active)──────┐
│                  │││              │  d  debug…              │     │││No spawned/background       │
│                  │││              │  e  export              │     │││processes tracked.          │
│                  │││              │  f  search output       │     │││                            │
│                  │││              │  i  info…               │     │││                            │
│                  │││              │  l  layout…             │     │││                            │
│                  ││└──────────────│  m  model               │─────┘││                            │
└──────────────────┘└───────────────│  o  external editor     │──────┘└────────────────────────────┘
┌Input──────────────────────────────│  p  pane…               │────────────────────────────────────┐
│                                   └─────────────────────────┘                                    │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
 NORMAL  💭 max  👤 default  ░░░░░░░░N/N.Nk   main  idle | MODEL
