tests/tui/snapshots/tui_tests__tui__tmux_smoke__tmux_startup_styled.snap
---
source: tests/tui/tmux_smoke.rs
assertion_line: 149
expression: styled
---
{#505050/-}│{Blk/-}touched yet.{-/-}  {#505050/-}│{cyn/-}│{#505050/-}│{-/-}                                    {#505050/-}│{cyn/-}│{#505050/-}│{-/-}                      {#505050/-}│
                                                                                
{#505050/-}│{-/-}              {#505050/-}│{cyn/-}│{#505050/-}│{-/-}                                    {#505050/-}│{cyn/-}│{#505050/-}└──────────────────────┘
                                                                                
{#505050/-}│{-/-}              {#505050/-}│{cyn/-}│{#505050/-}│{-/-}                                    {#505050/-}│{cyn/-}│{#505050/-}┌{*cyn/-} Spawned/BG (0 active){#505050/-}┐
                                                                                
{#505050/-}│{-/-}              {#505050/-}│{cyn/-}│{#505050/-}│{-/-}                                    {#505050/-}│{cyn/-}│{#505050/-}│{Blk/-}No spawned/background{-/-} {#505050/-}│
                                                                                
{#505050/-}│{-/-}              {#505050/-}│{cyn/-}│{#505050/-}│{-/-}                                    {#505050/-}│{cyn/-}│{#505050/-}│{Blk/-}processes tracked.{-/-}    {#505050/-}│
                                                                                
{#505050/-}│{-/-}              {#505050/-}│{cyn/-}│{#505050/-}│{-/-}                                    {#505050/-}│{cyn/-}│{#505050/-}│{-/-}                      {#505050/-}│
                                                                                
{#505050/-}│{-/-}              {#505050/-}│{cyn/-}│{#505050/-}└────────────────────────────────────┘{cyn/-}│{#505050/-}│{-/-}                      {#505050/-}│
                                                                                
{#505050/-}└──────────────┘{cyn/-}└──────────────────────────────────────┘{#505050/-}└──────────────────────┘
                                                                                
{#505050/-}┌Input─────────────────────────────────────────────────────────────────────────┐
                                                                                
{#505050/-}│{-/-}                                                                              {#505050/-}│
                                                                                
{#505050/-}└──────────────────────────────────────────────────────────────────────────────┘
                                                                                
{*blk/cyn} NORMAL {*blk/blu} 👤{-/-} {*blk/blu} default {*grn/-} ░░░░░░░░0/200.0k {*mag/-}  main {#dcdcdc/#1e1e1e} idle | claude-opus-4-6
